--- a/src/main/resources/templates/fragments/guideAsideFragment.html
+++ b/src/main/resources/templates/fragments/guideAsideFragment.html
@@ -82,7 +82,11 @@
 			<ul class="sidebar-nav" id="def-nav">
 				<li class="nav-item"><a class="nav-link collapsed"
 										data-bs-target="#weekly-report-nav" data-bs-toggle="collapse"
-										href="#"> <i class="bi bi-menu-button-wide"></i><span>Reports</span><i class="bi bi-chevron-down ms-auto"></i>
+										href="#"> <i class="bi bi-menu-button-wide"></i><span>Reports</span>
+					<span th:if="${notificationCounts['gPendingFinalReportCount'] > 0}"
+						  th:text="${notificationCounts['gPendingFinalReportCount']}"
+						  class="badge badge-danger">
+            </span><i class="bi bi-chevron-down ms-auto"></i>
 				</a>
 					<ul id="weekly-report-nav" class="nav-content collapse"
 						data-bs-parent="#weekly-report-nav">
@@ -91,6 +95,10 @@
 						</a></li>
 						<li><a th:href="@{/bisag/guide/guide_pending_final_reports}"> <i
 								class="bi bi-circle"></i><span>Final Reports</span>
+							<span th:if="${notificationCounts['gPendingFinalReportCount'] > 0}"
+								  th:text="${notificationCounts['gPendingFinalReportCount']}"
+								  class="badge badge-danger">
+            </span>
 						</a></li>
 					</ul></li>
 			</ul>
@@ -114,7 +122,7 @@
             </span>
 						</a></li>
 						<li><a th:href="@{/bisag/guide/create_project_def}">
-							<i class="bi bi-circle"></i><span>Update Definition</span>
+							<i class="bi bi-circle"></i><span>Assign/Update Definition</span>
 						</a></li>
 					</ul></li>
 			</ul>
