--- a/src/main/resources/templates/fragments/guideHeaderFragment.html
+++ b/src/main/resources/templates/fragments/guideHeaderFragment.html
@@ -4,24 +4,11 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="d-flex align-items-center justify-content-between">
         <a th:href="@{/bisag/guide/guide_dashboard}"
-           class="logo d-flex align-items-center"> <img
-                th:src="@{/assets/img/bisag_logo.png}" href="/bisag/guide/guide_dashboard" alt=""> <span
-                class="d-none d-lg-block">BISAG-N</span>
+           class="logo d-flex align-items-center">
+<!--            <img th:src="@{/assets/img/bisag_logo.png}" href="/bisag/guide/guide_dashboard" alt=""> <span class="d-none d-lg-block">BISAG-N</span>-->
         </a> <i class="bi bi-list toggle-sidebar-btn"></i>
     </div>
     <!-- End Logo -->
-
-    <div class="search-bar">
-        <form class="search-form d-flex align-items-center" method="POST"
-              action="#">
-            <input type="text" name="query" placeholder="Search"
-                   title="Enter search keyword">
-            <button type="submit" title="Search">
-                <i class="bi bi-search"></i>
-            </button>
-        </form>
-    </div>
-    <!-- End Search Bar -->
 
     <nav class="header-nav ms-auto">
         <ul class="d-flex align-items-center">
@@ -60,10 +47,10 @@
 								Profile</span>
                     </a></li>
 
-                    <li><a class="dropdown-item d-flex align-items-center"
-                           href="pages-faq.html"> <i class="bi bi-question-circle"></i> <span>Need
-								Help?</span>
-                    </a></li>
+<!--                    <li><a class="dropdown-item d-flex align-items-center"-->
+<!--                           href="pages-faq.html"> <i class="bi bi-question-circle"></i> <span>Need-->
+<!--								Help?</span>-->
+<!--                    </a></li>-->
                 </ul> <!-- End Profile Dropdown -->
             </li>
 
