--- a/src/main/resources/templates/fragments/hrHeaderFragment.html
+++ b/src/main/resources/templates/fragments/hrHeaderFragment.html
@@ -3,8 +3,8 @@
 <!-- headerFragment.html -->
 <header id="header" class="header fixed-top d-flex align-items-center">
   <div class="d-flex align-items-center justify-content-between">
-    <a th:href="@{/bisag/hr/hr_dashboard}" class="logo d-flex align-items-center"> <img
-            th:src="@{/assets/img/bisag_logo.png}" alt=""> <span class="d-none d-lg-block">BISAG-N</span>
+    <a th:href="@{/bisag/hr/hr_dashboard}" class="logo d-flex align-items-center">
+<!--      <img th:src="@{/assets/img/bisag_logo.png}" alt=""> <span class="d-none d-lg-block">BISAG-N</span>-->
     </a> <i class="bi bi-list toggle-sidebar-btn"></i>
   </div>
   <!-- End Logo -->
