--- a/src/main/resources/templates/fragments/internAsideFragment.html
+++ b/src/main/resources/templates/fragments/internAsideFragment.html
@@ -27,9 +27,6 @@
 		}
 	</style>
 
-
-
-
 	<ul class="sidebar-nav" id="interns-nav">
 		<li class="nav-item"><a class="nav-link"
 								th:href="@{/bisag/intern/intern_dashboard}"> <i
@@ -51,21 +48,20 @@
 								th:href="@{/bisag/intern/apply_leave}"> <i
 				class="bi bi-journal-plus"></i> <span>Apply for Leave</span>
 		</a></li>
-
 	</ul>
 
-	<ul class="sidebar-nav" id="def-nav">
-		<li class="nav-item"><a class="nav-link collapsed"
-								data-bs-target="#project-def-nav" data-bs-toggle="collapse" href="#">
-			<i class="bi bi-menu-button-wide"></i><span>Project Definition</span><i
-				class="bi bi-chevron-down ms-auto"></i>
-		</a>
-			<ul id="project-def-nav" class="nav-content collapse "
-				data-bs-parent="#project-def-nav">
-				<li><a th:href="@{/bisag/intern/project_definition}"> <i
-						class="bi bi-circle"></i><span>Project Definition</span>
-				</a></li>
-			</ul></li>
+	<ul class="sidebar-nav" id="interns-nav">
+		<li class="nav-item"><a class="nav-link"
+								th:href="@{/bisag/intern/announcement_alert}"><i class="bi bi-megaphone"></i>
+			<span>Announcements</span>
+		</a></li>
+	</ul>
+
+	<ul class="sidebar-nav" id="interns-nav">
+		<li class="nav-item"><a class="nav-link" th:href="@{/bisag/intern/project_definition}">
+			<i class="bi bi-file-text"></i>
+			<span>Project Definition</span>
+		</a></li>
 	</ul>
 
 	<ul class="sidebar-nav" id="def-nav">
@@ -77,7 +73,7 @@
 			<ul id="weekly-report-nav" class="nav-content collapse "
 				data-bs-parent="#weekly-report-nav">
 				<li><a th:href="@{/bisag/intern/weekly_report_submission}"> <i
-						class="bi bi-circle"></i><span>Your Reports</span>
+						class="bi bi-circle"></i><span>Weekly Progress Reports</span>
 				</a></li>
 				<li><a th:href="@{/bisag/intern/final_report_submission}"> <i
 						class="bi bi-circle"></i><span>Final Report</span>
@@ -106,12 +102,6 @@
 						class="bi bi-circle"></i><span>Feedback Forms</span>
 				</a></li>
 			</ul>
-			<ul id="preject-def-nav" class="nav-content collapse "
-				data-bs-parent="#admin-nav">
-			<li><a th:href="@{/bisag/intern/announcement_alert}"> <i
-					class="bi bi-circle"></i><span>Announcements</span>
-			</a></li>
-				</ul>
 		</li>
 	</ul>
 
