--- a/src/main/resources/templates/fragments/internHeaderFragment.html
+++ b/src/main/resources/templates/fragments/internHeaderFragment.html
@@ -4,9 +4,8 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 	<div class="d-flex align-items-center justify-content-between">
 		<a th:href="@{/bisag/intern/intern_dashboard}"
-		   class="logo d-flex align-items-center"> <img
-				th:src="@{/assets/img/bisag_logo.png}" alt=""> <span
-				class="d-none d-lg-block">BISAG-N</span>
+		   class="logo d-flex align-items-center">
+<!--			<img th:src="@{/assets/img/bisag_logo.png}" alt=""> <span class="d-none d-lg-block">BISAG-N</span>-->
 		</a> <i class="bi bi-list toggle-sidebar-btn"></i>
 	</div>
 	<!-- End Logo -->
