--- a/src/main/resources/templates/super_admin/super_admin_dashboard.html
+++ b/src/main/resources/templates/super_admin/super_admin_dashboard.html
@@ -45,12 +45,9 @@
 				</ol>
 			</nav>
 		</div>
-		<!-- End Page Title -->
-
 		<section class="section dashboard">
 			<div class="row">
 
-				<!-- Left side columns -->
 				<div class="col-lg-12">
 					<div class="row">
 
@@ -64,7 +61,7 @@
 									<div class="d-flex align-items-center">
 										<div
 											class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-											<i class="bi bi-people"></i>
+											<i class="bi bi-person-fill"></i>
 										</div>
 										<div class="ps-3">
 											<h6 th:text="${adminCount}"></h6>
@@ -91,6 +88,28 @@
 											<div class="ps-3">
 												<h6 th:text="${HRCount}"></h6>
 												<span class="text-success small pt-1 fw-bold">HRs</span>
+											</div>
+										</div>
+									</div>
+
+								</div>
+							</a>
+						</div>
+
+						<div class="col-xxl-3 col-md-4">
+							<a th:href="@{/bisag/super_admin/account_list}">
+								<div class="card info-card sales-card">
+
+									<div class="card-body">
+
+										<div class="d-flex align-items-center">
+											<div
+													class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+												<i class="bi bi-person-circle"></i>
+											</div>
+											<div class="ps-3">
+												<h6 th:text="${AccountCount}"></h6>
+												<span class="text-success small pt-1 fw-bold">Accountants</span>
 											</div>
 										</div>
 									</div>
