--- a/src/main/resources/templates/fragments/guideAsideFragment.html
+++ b/src/main/resources/templates/fragments/guideAsideFragment.html
@@ -78,6 +78,11 @@
 				<li><a th:href="@{/bisag/guide/intern_groups}"><i
 						class="bi bi-circle"></i><span>Group Details</span></a></li>
 			</ul>
+			<ul id="guide-components-nav" class="nav-content collapse "
+				data-bs-parent="#guide-nav">
+				<li><a th:href="@{/bisag/guide/document_status}"><i
+						class="bi bi-circle"></i><span>Intern Documents List</span></a></li>
+			</ul>
 
 			<ul class="sidebar-nav" id="def-nav">
 				<li class="nav-item"><a class="nav-link collapsed"
